// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages fareType should render correctly 1`] = `
<Component
  description="Forgot Password page of the Create Fares Data Service"
  errors={Array []}
  title="Forgot Password - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <CsrfForm
        action="/api/forgotPassword"
        csrfToken=""
        method="post"
      >
        <ErrorSummary
          errors={Array []}
        />
        <div
          className="govuk-form-group"
        >
          <h1
            className="govuk-heading-l"
            id="forgot-password-heading"
          >
            Forgot your Password?
          </h1>
          <p
            className="govuk-hint hint-text"
          >
            Enter your email address to reset your password. The link you will be emailed will only be usable for one hour.
          </p>
          <label
            className="govuk-label"
            htmlFor="email"
          >
            Email address
          </label>
          <div
            className="govuk-form-group"
          >
            <FormElementWrapper
              errorClass="govuk-input--error"
              errorId="email"
              errors={Array []}
            >
              <input
                autoComplete="email"
                className="govuk-input"
                defaultValue=""
                id="email"
                name="email"
                spellCheck="false"
                type="text"
              />
            </FormElementWrapper>
          </div>
        </div>
        <input
          className="govuk-button"
          id="continue-button"
          name="continue"
          type="submit"
          value="Continue"
        />
      </CsrfForm>
    </div>
    <div
      className="govuk-grid-column-one-third"
    >
      <p>
        <h2
          className="govuk-heading-s"
        >
          Don't have an account?
        </h2>
        <a
          className="govuk-link"
          href="/register"
        >
          Request Access
        </a>
      </p>
    </div>
  </div>
</Component>
`;

exports[`pages fareType should render error messaging when errors are passed to the page 1`] = `
<Component
  description="Forgot Password page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose a fare type from the options",
        "id": "fare-type-error",
      },
    ]
  }
  title="Forgot Password - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <CsrfForm
        action="/api/forgotPassword"
        csrfToken=""
        method="post"
      >
        <ErrorSummary
          errors={
            Array [
              Object {
                "errorMessage": "Choose a fare type from the options",
                "id": "fare-type-error",
              },
            ]
          }
        />
        <div
          className="govuk-form-group"
        >
          <h1
            className="govuk-heading-l"
            id="forgot-password-heading"
          >
            Forgot your Password?
          </h1>
          <p
            className="govuk-hint hint-text"
          >
            Enter your email address to reset your password. The link you will be emailed will only be usable for one hour.
          </p>
          <label
            className="govuk-label"
            htmlFor="email"
          >
            Email address
          </label>
          <div
            className="govuk-form-group"
          >
            <FormElementWrapper
              errorClass="govuk-input--error"
              errorId="email"
              errors={
                Array [
                  Object {
                    "errorMessage": "Choose a fare type from the options",
                    "id": "fare-type-error",
                  },
                ]
              }
            >
              <input
                autoComplete="email"
                className="govuk-input"
                defaultValue=""
                id="email"
                name="email"
                spellCheck="false"
                type="text"
              />
            </FormElementWrapper>
          </div>
        </div>
        <input
          className="govuk-button"
          id="continue-button"
          name="continue"
          type="submit"
          value="Continue"
        />
      </CsrfForm>
    </div>
    <div
      className="govuk-grid-column-one-third"
    >
      <p>
        <h2
          className="govuk-heading-s"
        >
          Don't have an account?
        </h2>
        <a
          className="govuk-link"
          href="/register"
        >
          Request Access
        </a>
      </p>
    </div>
  </div>
</Component>
`;
